--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -163,6 +163,42 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./interfaces/OrderI.html">src/app/core/interfaces/order-i.ts</a>
+            </td>
+            <td>interface</td>
+            <td>OrderI</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/9)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/Order.html">src/app/core/models/order.ts</a>
+            </td>
+            <td>class</td>
+            <td>Order</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/10)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/OrdersService.html">src/app/core/services/orders.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>OrdersService</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/11)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./components/IconCloseComponent.html">src/app/icons/icon-close/icon-close.component.ts</a>
             </td>
             <td>component</td>
@@ -223,13 +259,49 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./components/FormOrderComponent.html">src/app/orders/components/form-order/form-order.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>FormOrderComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/8)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/OrderCommentComponent.html">src/app/orders/components/order-comment/order-comment.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>OrderCommentComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/OrderDetailsComponent.html">src/app/orders/components/order-details/order-details.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>OrderDetailsComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./components/PageAddOrderComponent.html">src/app/orders/pages/page-add-order/page-add-order.component.ts</a>
             </td>
             <td>component</td>
             <td>PageAddOrderComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/3)</span>
+                <span class="coverage-count">(0/5)</span>
             </td>
         </tr>
         <tr class="low">
@@ -241,7 +313,7 @@
             <td>PageEditOrderComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/3)</span>
+                <span class="coverage-count">(0/5)</span>
             </td>
         </tr>
         <tr class="low">
@@ -253,7 +325,7 @@
             <td>PageListOrdersComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/3)</span>
+                <span class="coverage-count">(0/12)</span>
             </td>
         </tr>
         <tr class="low">
@@ -277,7 +349,19 @@
             <td>BtnComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/3)</span>
+                <span class="coverage-count">(0/5)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/TableauDarkComponent.html">src/app/shared/components/tableau-dark/tableau-dark.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>TableauDarkComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
             </td>
         </tr>
         <tr class="low">
@@ -287,6 +371,138 @@
             </td>
             <td>component</td>
             <td>TableauLightComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./directives/StateDirective.html">src/app/shared/directives/state.directive.ts</a>
+            </td>
+            <td>directive</td>
+            <td>StateDirective</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/5)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./pipes/TotalPipe.html">src/app/shared/pipes/total.pipe.ts</a>
+            </td>
+            <td>pipe</td>
+            <td>TotalPipe</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/PageStatsComponent.html">src/app/stats/pages/page-stats/page-stats.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>PageStatsComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/TemplateContainerComponent.html">src/app/templates/template-container/template-container.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>TemplateContainerComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/TemplateFullwidthComponent.html">src/app/templates/template-fullwidth/template-fullwidth.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>TemplateFullwidthComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/TextBandeauComponent.html">src/app/texts/text-bandeau/text-bandeau.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>TextBandeauComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/TextDialogErrorComponent.html">src/app/texts/text-dialog-error/text-dialog-error.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>TextDialogErrorComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/TextDialogInfoComponent.html">src/app/texts/text-dialog-info/text-dialog-info.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>TextDialogInfoComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/TextDialogSuccessComponent.html">src/app/texts/text-dialog-success/text-dialog-success.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>TextDialogSuccessComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/TextDialogWarningComponent.html">src/app/texts/text-dialog-warning/text-dialog-warning.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>TextDialogWarningComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/TextPageComponent.html">src/app/texts/text-page/text-page.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>TextPageComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/3)</span>
