--- a/documentation/modules/OrdersRoutingModule.html
+++ b/documentation/modules/OrdersRoutingModule.html
@@ -71,11 +71,26 @@
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { NgModule } from &#x27;@angular/core&#x27;;
-import { Routes, RouterModule } from &#x27;@angular/router&#x27;;
+import { RouterModule, Routes } from &#x27;@angular/router&#x27;;
+import { OrderCommentComponent } from &#x27;./components/order-comment/order-comment.component&#x27;;
+import { OrderDetailsComponent } from &#x27;./components/order-details/order-details.component&#x27;;
+import { PageAddOrderComponent } from &#x27;./pages/page-add-order/page-add-order.component&#x27;;
+import { PageEditOrderComponent } from &#x27;./pages/page-edit-order/page-edit-order.component&#x27;;
 import { PageListOrdersComponent } from &#x27;./pages/page-list-orders/page-list-orders.component&#x27;;
 
 const routes: Routes &#x3D; [
-  { path: &#x27;&#x27;, component: PageListOrdersComponent }
+  {
+    path: &#x27;&#x27;,
+    component: PageListOrdersComponent,
+    data: {title: &#x27;List Orders&#x27;},
+    children: [
+      { path: &#x27;&#x27;, redirectTo: &#x27;details&#x27;, pathMatch: &#x27;full&#x27; },
+      { path: &#x27;details&#x27;, component: OrderDetailsComponent },
+      { path: &#x27;comment&#x27;, component: OrderCommentComponent },
+    ]
+  },
+  { path: &#x27;add&#x27;, component: PageAddOrderComponent },
+  { path: &#x27;edit/:id&#x27;, component: PageEditOrderComponent }
 ];
 
 @NgModule({
